--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
       ],
     
    "logo":    "https://telegra.ph/file/1495fab0586fe05160204.jpg",  
-   "repository": "https://github.com/AMANTYA1/Yuriko",
+   "repository": "https://github.com/opsumitop/Yuriko",
    "addons": [
           {
          "options": {
